--- a/src/pages/SearchResults.module.css
+++ b/src/pages/SearchResults.module.css
@@ -1,19 +1,12 @@
 .search-results{
     display: flex;
     flex-direction: row;
-    min-height: 90vh;
+    height: 100%;
 }
 .search-results__panel{
-    display: none;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    color: var(--text-color);
-
     width: 25%;
-    min-height: 25vh;
-    padding-top: 2rem;
     background-color: var(--background-color-faded);
+
 }
 .search-results__panel h3{
     color: var(--title-color);
@@ -21,6 +14,7 @@
 .search-results__main{
     padding: 2rem;
     width: 100%;
+    overflow-y: scroll;
 }
 .search-results__main__title{
     margin-bottom: 2rem;
