--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,7 @@ a {
     --main-color-faded: #fdf4d7;
     --background-color: #ffffff;
     --background-color-faded: #f0f0f0;
+    --background-border-color: #dbdbdb;
 
     --title-color: #2e2e2e;
     --text-color: #3d3d3d;
