--- a/src/components/Forms/LoginForm.module.css
+++ b/src/components/Forms/LoginForm.module.css
@@ -10,30 +10,25 @@
     flex-direction: column;
     gap: 1rem;
 }
-.login__form input {
+.input__container input {
     width: 100%;
-    padding: 1rem;
+    padding: 0.5rem;
     border: none;
-    border-bottom: 1px solid var(--text-color);
+    border-bottom: 1px solid var(--background-color-faded);
     outline: none;
 }
-.login__form input[type="email"]:focus,
-.login__form input[type="password"]:focus {
+.input__container input[type="email"]:focus,
+.input__container input[type="password"]:focus {
     border: none;
-    outline: var(--main-color) solid 1px;
-    color: var(--main-color);
+    color: var(--text-color);
+    background-color: var(--background-color-faded);
 }
-.login__form input::placeholder {
+.input__container input::placeholder {
     color: var(--text-color);
 }
-.login__form input[type="email"]:focus::placeholder,
-.login__form input[type="password"]:focus::placeholder {
-    color: var(--main-color);
-}
-
-.login__form a {
-    color: var(--main-color);
-    text-align: center;
+.input__container input[type="email"]:focus::placeholder,
+.input__container input[type="password"]:focus::placeholder {
+    color: var(--text-color);
 }
 .login__form {
     justify-content: center;
