--- a/src/components/Misc/Footer.module.css
+++ b/src/components/Misc/Footer.module.css
@@ -10,6 +10,7 @@
 
     padding: 1rem 2rem;
 
+    border-top: 1px solid var(--background-border-color);
     background-color: var(--background-color-faded);
 }
 .footer__navigation__menu {
