--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -26,14 +26,25 @@
 .login__main {
     width: 100%;
     padding: 0 2.5rem;
+    border-left: 1px solid var(--background-color-faded);
 }
 .form__container {
     width: 100%;
 }
 .login__main__links{
-    padding: 0.5rem;
+    margin: 0.5rem;
     width: 100%;
     text-align: center;
+}
+.login__main__links a{
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    text-decoration: underline;
+    color: var(--text-color);
+}
+.login__main__links a:hover{
+    
+    color: var(--text-color-hover);
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
@@ -44,10 +55,10 @@
     .login-text {
         padding: 0 3.5rem;
         height: 100%;
-        width: 50%;
+        width: 60%;
     }
     .login__main {
-        width: 50%;
+        width: 40%;
         padding: 0 3.5rem;
     }
 }
@@ -58,10 +69,10 @@
     }
     .login-text {
         padding: 0 5rem;
-        width: 50%;
+        width: 60%;
     }
     .login__main {
-        width: 50%;
+        width: 40%;
         padding: 0 5rem;
     }
 }
