--- a/src/pages/Registration.module.css
+++ b/src/pages/Registration.module.css
@@ -1,9 +1,9 @@
 .registration {
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    min-height: 90vh;
+    height: 90vh;
+    background-color: var(--background-color-faded);
 }
 .registration__title {
     display: flex;
@@ -13,49 +13,56 @@
 }
 .registration__title h1 {
     color: var(--title-color);
-    font-size: 2.5rem;
-}
-.registration__title p {
-    color: var(--text-color);
-}
-.registration__title,
+    font-size: 1.5rem;
+} 
 .registration__main {
-    justify-content: center;
-    padding: 0 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 100%;
+    padding: 2.5rem;
+    border-left: 1px solid var(--background-border-color);
+    border-right: 1px solid var(--background-border-color);
+    background-color: white;
 }
 .registration__form__container {
     width: 100%;
 }
 .registration__links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    padding: 0.5rem;
-    text-align: center;
+    gap: 0.5rem;
+}
+.registration__links a{
+    font-size: 0.8rem; 
     color: var(--text-color);
+    text-decoration: underline;
+}
+.registration__links a:hover{
+    color: var(--text-color-hover);
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-    .registration {
-        align-items: center;
-        flex-direction: row;
-    }
-    .registration__title,
     .registration__main {
         width: 50%;
-
         padding: 0 3.5rem;
+    }
+    .registration__links{
+        display: flex;
+        flex-direction: row;
     }
 }
 @media (min-width: 1025px) {
-    .registration {
+    .registration{
         align-items: center;
-        flex-direction: row;
     }
-
-    .registration__title,
-    .registration__main {
+    .registration__main{
         width: 50%;
-
-        box-sizing: border-box;
-        padding: 0 5rem;
+    }
+    .registration__links{
+        display: flex;
+        flex-direction: row;
     }
 }
