refactor: add fixed height

--- a/src/components/Sections/HomeBanner.module.css
+++ b/src/components/Sections/HomeBanner.module.css
@@ -9,10 +9,11 @@
     overflow: hidden;
 }
 .active-promos img {
+    height: 340px;
     object-fit: cover;
     object-position: center;
 }
-.control-panel{
+.control-panel {
     display: flex;
     align-items: center;
     justify-content: center;
