--- a/src/components/Inputs/UserImageInput.module.css
+++ b/src/components/Inputs/UserImageInput.module.css
@@ -4,7 +4,7 @@
     height: 100%;
     overflow: hidden;
 }
-[type="file"] {
+.profile-picture input[type="file"] {
     position: absolute;
     bottom: 0;
     width: 100%;
