feat: add recently viewed products display

--- a/src/components/Sections/ProductReviews.module.css
+++ b/src/components/Sections/ProductReviews.module.css
@@ -8,6 +8,7 @@
 }
 .ratings__main {
     width: 100%;
+    border-bottom: 1px solid var(--background-border-color);
 }
 .ratings__title {
     display: flex;
