--- a/src/pages/Product.module.css
+++ b/src/pages/Product.module.css
@@ -34,6 +34,8 @@
     color: var(--title-color);
 }
 
+.product__recent__section{
+}
 @media (min-width: 769px) and (max-width: 1024px) {
     .product {
         font-family: Arial, Helvetica, sans-serif;
