--- a/src/components/Sections/ProductAbout.module.css
+++ b/src/components/Sections/ProductAbout.module.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--background-color);
+    border-left: 1px solid var(--background-border-color);
     gap: 1rem;
     padding: 1rem;
 }
