--- a/src/components/Cards/FaqCard.module.css
+++ b/src/components/Cards/FaqCard.module.css
@@ -1,10 +1,12 @@
 .faq-item {
     display: flex;
     flex-direction: column;
-    color: var(--text-color);
+    cursor: pointer;
     padding: 0.5rem;
+    color: var(--text-color);
+    border: 1px solid var(--background-border-color);
     background-color: var(--background-color);
-}
+} 
 .question-container{
     display: flex;
     flex-direction: row;
