--- a/src/components/Cards/ShoppingCartCard.module.css
+++ b/src/components/Cards/ShoppingCartCard.module.css
@@ -1,20 +1,26 @@
 .container__item {
-    border-top: 1px solid var(--background-color-faded);
-    padding: 0.5rem;
-    height: 15vh;
     display: flex;
     flex-direction: row;
+    cursor: pointer;
+
+    height: 10vh;
     gap: 1rem;
+    padding: 0.5rem;
+    background-color: white;
+    border: 1px solid var(--background-color-faded);
+}
+.container__item:hover{
+    background-color: var(--background-color-faded);
 }
 .container__picture {
-    width: 100px;
+    width: 140px;
     height: 100%;
+    background-color: var(--background-color-faded);
 }
 .container__details {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 0.5rem;
     width: 100%;
     height: 100%;
 }
@@ -24,15 +30,18 @@
     justify-content: space-between;
     width: 100%;
 }
-.container__pricing {
+.details__title p{
+    color: var(--title-color);
+}
+.details__pricing {
     display: flex;
     flex-direction: column;
 }
-.container__pricing p {
+.details__pricing p {
     color: var(--text-color);
     font-size: 0.7rem;
 }
-.container__pricing strong{
+.details__pricing strong{
     color: var(--text-color);
     font-size: 0.9rem;
 }
@@ -46,7 +55,14 @@
     font-size: 0.8rem;
     color: var(--text-color);
 }
-@media (min-width: 769px) and (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1024px) { 
 }
 @media (min-width: 1025px) {
+    .container__item {
+        height: 15vh;
+        gap: 1rem;
+        padding: 0.5rem;
+        background-color: white;
+        border: 1px solid var(--background-color-faded);
+    }
 }
