--- a/src/pages/AddFunds.module.css
+++ b/src/pages/AddFunds.module.css
@@ -1,126 +1,99 @@
-.add-funds{
-    min-height: 90vh;
-    width: 100%;
+.add-funds {
     display: flex;
     flex-direction: column-reverse;
+    min-height: 90vh;
+    width: 100%;
 }
-.add-funds__main{
+.add-funds__main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     padding: 2rem;
 }
-.add-funds__title{
+.add-funds__title {
     display: flex;
     align-items: center;
     text-align: center;
 }
-.add-funds__title h2{
+.add-funds__title h2 {
     font-size: 1.3rem;
     color: var(--title-color);
 }
-.add-funds__card-container{
+.add-funds__card-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
 }
-.add-funds__card{
+.add-funds__current-fund {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    height: 50vh;
-    border-radius: 5px;
-    border: 1px solid var(--background-color-faded);
-    background-color: var(--background-color);
-}
-.add-funds__card div{
+    height: fit-content;
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.add-funds__card p{
-    color: var(--text-color);
-}
-.add-funds__card strong{
-    color: var(--title-color);
-    font-size: 2rem;
-}
-.add-funds__btn-panel{
-    width: 100%;
+    border-radius: 5px;
     background-color: var(--background-color-faded);
 }
-.add-funds__card button{
-    background-color: var(--main-color);
-    font-size: 1.3rem;
-    padding: 0.5rem 1rem;
-    font-weight: bolder;
-    color: white;
-    cursor: pointer;
-}
-.add-funds__current-fund{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
-}
-.add-funds__current-fund div{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.add-funds__current-fund p{
+.current-fund__title h3 {
     font-size: 1.2rem;
-    color: var(--text-color);
-}
-.add-funds__current-fund strong{
-    font-size: 1.5rem;
     color: var(--title-color);
 }
-@media (min-width: 769px) and (max-width: 1024px) {
-    .add-funds{
-        flex-direction: column;
-    }
-    .add-funds__title{
-        
-    }
-    .add-funds__main{
-        align-items: center;
-    }
-    .add-funds__card-container{
-        width: 70%;
-        grid-template-columns: repeat(3, auto);
-    }
-    .add-funds__card{
-        width: 70%;
-    }
-    .add-funds__card button{
-        font-size: 1rem;
-    }
+.current-fund__wallet {
+    display: flex;
+    align-items: center;
+    padding: 1rem;
+    display: flex;
+    gap: 1rem;
 }
-@media (min-width: 1025px) {
-    .add-funds{
-        flex-direction: column;
-    }
-    .add-funds__title{
-        
-    }
-    .add-funds__main{
-        align-items: center;
-    }
-    .add-funds__card-container{
-        display: flex;
+.current-fund__wallet p {
+    color: var(--text-color);
+    font-size: 0.8rem;
+}
+.current-fund__wallet strong {
+    color: var(--title-color);
+    font-size: 1.2rem;
+}
+.current-fund__links a {
+    text-decoration: underline;
+    font-size: 0.8rem;
+    color: var(--text-color);
+}
+@media (min-width: 769px) and (max-width: 1024px) {
+    .add-funds {
+        height: 90vh;
         flex-direction: row;
+    }
+    .add-funds__main {
+        overflow-y: scroll;
+        width: 70%;
+    }
+    .add-funds__current-fund {
+        margin: 2rem;
+        width: 30%;
+    }
+    .add-funds__card-container {
+        display: flex;
+        flex-direction: column;
         width: 100%;
         justify-content: space-between;
     }
-    .add-funds__card{
+}
+@media (min-width: 1025px) {
+    .add-funds {
+        height: 90vh;
+        flex-direction: row;
+    }
+    .add-funds__main {
+        overflow-y: scroll;
+        width: 70%;
+    }
+    .add-funds__current-fund {
+        margin: 2rem;
         width: 30%;
     }
-    .add-funds__card button{
-        font-size: 1rem;
+    .add-funds__card-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: space-between;
     }
 }
