--- a/src/components/Cards/CustomFundsCard.module.css
+++ b/src/components/Cards/CustomFundsCard.module.css
@@ -15,6 +15,9 @@
 }
 .add-funds-card__amount-input input {
     font-size: 1.2rem;
+    margin-top: 0.25rem;
+    background-color: var(--background-color-faded);
+    border-bottom: 1px solid var(--background-border-color);
 }
 .add-funds-card button {
     background-color: var(--main-color);
