--- a/src/components/Forms/ProfileSettingsForm.module.css
+++ b/src/components/Forms/ProfileSettingsForm.module.css
@@ -4,21 +4,46 @@
     align-items: center;
     gap: 0.5rem;
 }
-.edit-profile__form textarea {
+.form__main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+}
+.form__main__basic-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5rem;
+}
+.form__main__basic-info__title {
+    padding: 0.5rem 0;
+    border-bottom: 1px solid var(--background-border-color);
+}
+.form__main__basic-info__title h3 {
+    font-size: 1.2rem;
+    color: var(--title-color);
+}
+.form__main__basic-info__inputs{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 0.5rem;
+    width: 100%;
+}
+.input-container textarea {
     resize: none;
 }
-.edit-profile__form textarea,
-.edit-profile__form input[type="text"] {
+.input-container  textarea,
+.input-container  input {
     font-size: 1rem;
     padding: 0.5rem;
     width: 100%;
     background-color: var(--background-color-faded);
     border-radius: 5px;
 }
-.form__main {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.input-container label {
+    color: var(--title-color);
 }
 .image-input__container {
     display: flex;
@@ -27,15 +52,6 @@
     width: 200px;
     height: 200px;
     gap: 0.5rem;
-}
-.input__larger-container {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
-    width: 100%;
-}
-.input__larger-container div {
-    width: 50%;
 }
 .form__main__submit {
     width: 50%;
@@ -70,7 +86,7 @@
         align-items: center;
         width: 30%;
     }
-    .image-input__container{
+    .image-input__container {
         width: 250px;
         height: 250px;
     }
