--- a/src/components/Subpages/EditProfile.module.css
+++ b/src/components/Subpages/EditProfile.module.css
@@ -9,6 +9,12 @@
     flex-grow: 1;
 }
 @media (min-width: 769px) and (max-width: 1024px) {
+    .settings__edit-profile {
+        padding: 2rem;
+    }
 }
 @media (min-width: 1025px) {
+    .settings__edit-profile {
+        padding: 2rem;
+    }
 }
