--- a/src/index.css
+++ b/src/index.css
@@ -49,9 +49,18 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+@font-face {
+    font-family: "Valorax";
+    src: url("./assets/valorax.otf");
+}
+
+@font-face {
+    font-family: "Montserrat-Regular";
+    src: url("./assets/Montserrat/static/Montserrat-Regular.ttf");
+}
 
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat-Regular";
     box-sizing: border-box;
     text-decoration: none;
 	border: none;
@@ -61,10 +70,7 @@ a {
 	color: inherit;
 }
 
-@font-face {
-    font-family: "Valorax";
-    src: url("./assets/valorax.otf");
-}
+
 .electroware{
     position: relative;
 } 
